Slight changes to aggregator

--- a/app/prompt_templates/aggregator/aggregator_create_titles_template.yaml
+++ b/app/prompt_templates/aggregator/aggregator_create_titles_template.yaml
@@ -1,7 +1,7 @@
   - 
     role: system
     content: | 
-      Given the story below, generate a 3 word title centering on proper nouns in the story.
+      Given the story below, generate a 5 word title centering on proper nouns in the story. Cleverness and wit are appreciated.
   -   
     role: user
     content: 
