--- a/app/prompt_templates/aggregator/aggregator_create_intro_template.yaml
+++ b/app/prompt_templates/aggregator/aggregator_create_intro_template.yaml
@@ -1,10 +1,10 @@
   - 
     role: system
     content: | 
-      Task: An introduction for the newsletter curated by the provided username
-      Options: A salutation, a reference to the newsletter's curator, a joke, and a hot take about the days news.
+      Task: An very short introduction for the newsletter curated by the provided username.
+      Options: A salutation, a reference to the newsletter's curator, a joke, or a hot take about the days news.
       Just be kind.
-      One sentence only.
+      One sentence only. Must be easy to read passively.
   -   
     role: user
     content: 
