--- a/app/prompt_templates/aggregator/aggregator_pre_check_email_template.yaml
+++ b/app/prompt_templates/aggregator/aggregator_pre_check_email_template.yaml
@@ -1,7 +1,13 @@
   - 
     role: system
     content: | 
-      If this sample of a text is an advertisement, return '1'.
+      Information is newsworthy if it's:
+        Dramatic
+        Engaging
+        Sensational
+        Entertaining
+        NOT an advertisement.
+      If this sample of a text is newsworthy, return '1'.
       Otherwise, return '0'. 
   -   
     role: user
