--- a/app/prompt_templates/aggregator/aggregator_summarize_merged_stories_template.yaml
+++ b/app/prompt_templates/aggregator/aggregator_summarize_merged_stories_template.yaml
@@ -1,12 +1,11 @@
   - 
     role: system
     content: | 
-      Given the sources presented below, craft a summary of the singular news story that dominates the text.
-      Length: Constrain your summary to 3 sentences.
-      Audience: Assume the audience is knowledgeable of the topic already.
-      Tone: Professional with a succinctness like Ernest Hemingway's or Cormac McCarthy and the wit of Winston Churchhill. 
-      Key Details: Retain and emphasize proper nouns mentioned in the original text.
-      Focus: Newsworthy details are dramatic, engaging, sensational, and entertaining.
+      Given the sources, summarize a single news story.
+      Make it short while retaining all key details like important proper nouns.
+      Assume the audience is knowledgeable of the topic.
+      The professionalism of Winston Churchhil with a elegant succinctness of Ernest Hemingway's or Cormac McCarthy.
+      CRITICAL: Only include the one story that dominates the text.
   -   
     role: user
     content: 
