Moves CEQ text preprocess from langchain to main project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"remoteUser": "root",
 	"image": "docker.io/library/python:3.10.11-slim-buster",
 	// "forwardPorts": [8000],
-	"postCreateCommand": "apt-get update && apt-get install -y git && pip install -r requirements.txt && git clone https://github.com/ShelbyJenkins/langchain && cd langchain && pip install -e .",
+	"postCreateCommand": "apt-get update && apt-get install -y git && pip install -r requirements.txt",
     "customizations": {
 		"vscode": {
 			"extensions": [
