Moves location of deployment_maker

--- a/.github/workflows/personal_deployment.yaml
+++ b/.github/workflows/personal_deployment.yaml
@@ -8,18 +8,18 @@ jobs:
     env:
 
         ### Secrets ###
-        PERSONAL_SLACK_BOT_TOKEN:  ${{ secrets.PERSONAL_SLACK_BOT_TOKEN }}
-        PERSONAL_DOCKER_TOKEN:  ${{ secrets.PERSONAL_DOCKER_TOKEN }}
-        PERSONAL_STACKPATH_API_CLIENT_SECRET:  ${{ secrets.PERSONAL_STACKPATH_API_CLIENT_SECRET }}
-        PERSONAL_PINECONE_API_KEY:  ${{ secrets.PERSONAL_PINECONE_API_KEY }}
-        PERSONAL_SLACK_APP_TOKEN:  ${{ secrets.PERSONAL_SLACK_APP_TOKEN }}
-        PERSONAL_STACKPATH_STACK_SLUG:  ${{ secrets.PERSONAL_STACKPATH_STACK_SLUG }}
-        PERSONAL_OPENAI_API_KEY:  ${{ secrets.PERSONAL_OPENAI_API_KEY }}
-        PERSONAL_STACKPATH_CLIENT_ID:  ${{ secrets.PERSONAL_STACKPATH_CLIENT_ID }}
         PERSONAL_DISCORD_BOT_TOKEN:  ${{ secrets.PERSONAL_DISCORD_BOT_TOKEN }}
+        PERSONAL_STACKPATH_API_CLIENT_SECRET:  ${{ secrets.PERSONAL_STACKPATH_API_CLIENT_SECRET }}
+        PERSONAL_STACKPATH_CLIENT_ID:  ${{ secrets.PERSONAL_STACKPATH_CLIENT_ID }}
+        PERSONAL_OPENAI_API_KEY:  ${{ secrets.PERSONAL_OPENAI_API_KEY }}
+        PERSONAL_DOCKER_TOKEN:  ${{ secrets.PERSONAL_DOCKER_TOKEN }}
+        PERSONAL_SLACK_APP_TOKEN:  ${{ secrets.PERSONAL_SLACK_APP_TOKEN }}
+        PERSONAL_SLACK_BOT_TOKEN:  ${{ secrets.PERSONAL_SLACK_BOT_TOKEN }}
+        PERSONAL_STACKPATH_STACK_SLUG:  ${{ secrets.PERSONAL_STACKPATH_STACK_SLUG }}
+        PERSONAL_PINECONE_API_KEY:  ${{ secrets.PERSONAL_PINECONE_API_KEY }}
         # Secrets in the format of 'secrets.NAME' with the 'NAME' portion added to your forked repos secrets. #
 
-        REQUIRED_SECRETS: SLACK_BOT_TOKEN;DOCKER_TOKEN;STACKPATH_API_CLIENT_SECRET;PINECONE_API_KEY;SLACK_APP_TOKEN;STACKPATH_STACK_SLUG;OPENAI_API_KEY;STACKPATH_CLIENT_ID;DISCORD_BOT_TOKEN;
+        REQUIRED_SECRETS: DISCORD_BOT_TOKEN;STACKPATH_API_CLIENT_SECRET;STACKPATH_CLIENT_ID;OPENAI_API_KEY;DOCKER_TOKEN;SLACK_APP_TOKEN;SLACK_BOT_TOKEN;STACKPATH_STACK_SLUG;PINECONE_API_KEY;
         DEPLOYMENT_NAME: personal
 
     steps:
