--- a/app/deployments/personal/requirements.txt
+++ b/app/deployments/personal/requirements.txt
@@ -1,47 +1,47 @@
-PyYAML==6.0
-greenlet==2.0.2
-slack-bolt==1.18.0
-click==8.1.4
-aiosignal==1.3.1
+tenacity==8.2.2
 regex==2023.6.3
+attrs==23.1.0
 typing_extensions==4.7.1
-joblib==1.3.1
-multidict==6.0.4
-frozenlist==1.3.3
-mypy-extensions==1.0.0
-packaging==23.1
-tiktoken==0.4.0
-nltk==3.8.1
-six==1.16.0
-langchainplus-sdk==0.0.20
+python-dateutil==2.8.2
+dataclasses-json==0.5.9
+numpy==1.25.1
+urllib3==2.0.3
+aiosignal==1.3.1
+mmh3==4.0.0
 charset-normalizer==3.2.0
-git+https://github.com/ShelbyJenkins/langchain
-requests==2.31.0
-openapi-schema-pydantic==1.2.4
-async-timeout==4.0.2
+python-dotenv==1.0.0
 loguru==0.7.0
-marshmallow==3.19.0
-SQLAlchemy==2.0.18
-numexpr==2.8.4
-pydantic==1.10.11
-openai==0.27.8
-idna==3.4
-certifi==2023.5.7
-wget==3.2
-dnspython==2.3.0
+multidict==6.0.4
+slack-sdk==3.21.3
+typing-inspect==0.9.0
 tqdm==4.65.0
 marshmallow-enum==1.5.1
-yarl==1.9.2
-slack-sdk==3.21.3
-attrs==23.1.0
-urllib3==2.0.3
-mmh3==4.0.0
-dataclasses-json==0.5.9
-discord.py==2.3.1
-python-dateutil==2.8.2
+openai==0.27.8
+tiktoken==0.4.0
+certifi==2023.5.7
+greenlet==2.0.2
+mypy-extensions==1.0.0
+langchain==0.0.273
+langchainplus-sdk==0.0.20
+pydantic==1.10.11
+async-timeout==4.0.2
+dnspython==2.3.0
+SQLAlchemy==2.0.18
 aiohttp==3.8.4
-typing-inspect==0.9.0
+slack-bolt==1.18.0
+PyYAML==6.0
+idna==3.4
+nltk==3.8.1
+packaging==23.1
+six==1.16.0
+joblib==1.3.1
+wget==3.2
+yarl==1.9.2
+marshmallow==3.19.0
+frozenlist==1.3.3
+discord.py==2.3.1
 pinecone-client==2.2.2
-tenacity==8.2.2
-numpy==1.25.1
-python-dotenv==1.0.0
+requests==2.31.0
+openapi-schema-pydantic==1.2.4
+numexpr==2.8.4
+click==8.1.4
