--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,53 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+anyio==3.7.1
 asttokens==2.2.1
 async-timeout==4.0.2
 attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 black==23.7.0
+blis==0.7.10
 bs4==0.0.1
+catalogue==2.0.9
 certifi==2023.5.7
 charset-normalizer==3.2.0
 click==8.1.4
 comm==0.1.3
+confection==0.1.1
+cymem==2.0.7
 dataclasses-json==0.5.9
 debugpy==1.6.7
 decorator==5.1.1
 discord.py==2.3.1
 dnspython==2.3.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
+exceptiongroup==1.1.3
 executing==1.2.0
+fastapi==0.103.1
 frozenlist==1.3.3
 greenlet==2.0.2
+h11==0.14.0
 idna==3.4
 ipykernel==6.24.0
 ipython==8.14.0
 jedi==0.18.2
+Jinja2==3.1.2
 joblib==1.3.1
 jupyter_client==8.3.0
 jupyter_core==5.3.1
 langchain==0.0.273
+langcodes==3.3.0
 langsmith==0.0.26
 loguru==0.7.0
 lxml==4.9.3
+MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 matplotlib-inline==0.1.6
 mmh3==4.0.0
 multidict==6.0.4
+murmurhash==1.0.9
 mypy==1.4.1
 mypy-extensions==1.0.0
 nest-asyncio==1.5.6
@@ -46,10 +59,12 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 parso==0.8.3
 pathspec==0.11.1
+pathy==0.10.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pinecone-client==2.2.2
 platformdirs==3.9.1
+preshed==3.0.8
 prompt-toolkit==3.0.39
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -68,19 +83,30 @@ ruff==0.0.278
 six==1.16.0
 slack-bolt==1.18.0
 slack-sdk==3.21.3
+smart-open==6.3.0
+sniffio==1.3.0
 soupsieve==2.4.1
+spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
 SQLAlchemy==2.0.18
+srsly==2.4.7
 stack-data==0.6.2
+starlette==0.27.0
 tenacity==8.2.2
+thinc==8.1.12
 tiktoken==0.4.0
 tokenize-rt==5.1.0
 tomli==2.0.1
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
+typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==2.0.3
+uvicorn==0.23.2
+wasabi==1.1.2
 wcwidth==0.2.6
 wget==3.2
 yarl==1.9.2
